# sodermalm

./: .prettierrc  README.md  pyproject.toml
docker/: docker-compose.yml
src/sodermalm/: __init__.py  alembic.ini  api.py  cli.py  config.py  database.py  enums.py  main.py  models.py
src/sodermalm/alembic/: env.py
src/sodermalm/alembic/versions/: d9dd29a29266_create_users_table.py
src/sodermalm/team/: models.py  views.py
src/sodermalm/user/: models.py
